processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast__tests__masm_consistency__test_masm_errors_consistency__case_2.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_err
---
OperationError {
    label: SourceSpan {
        source: Session(
            SourceId {
                namespace: SourceNamespace(
                    None,
                ),
                local: 4294967295,
            },
        ),
        revision: None,
        range: TextRange {
            start: 0,
            end: 0,
        },
    },
    sources: None,
    err: NotBinaryValue {
        context: Loop,
        value: 100,
    },
}
